@@ -1,22 +1,31 @@
 .TH detect_handledata 3 2015-12-11 "libchardet manuals"
 .\" Process with
 .\" nroff -man detect_handledata.3
-.\" 2015-12-11 JoungKyun Kim <htt://oops.org>
+.\" 2016-05-05 JoungKyun.Kim <htt://oops.org>
 .\" $Id$
 
 .SH NAME
-detect_handledata \- Detecting character set and measuring accuracy of charset
+detect_handledata, detect_handledata_r \- Detecting character set and measuring accuracy of charset
 
 .SH SNOPSYS
 .B "#include <chardet.h>"
 .sp
 .BI "short chardet_handledata (Detect ** handle, const char * inbuf, DetectObj ** outbuf);"
+.sp
+.BI "short chardet_handledata_r (Detect ** handle, const char * inbuf, size_t inlen, DetectObj ** outbuf);"
 
 .SH DESCRIPTION
 Storing charset and accuracy of
 .B inbuf to
 .B outbuf
 
+The
+.BI detect_handledata
+API is deprecated becase this api is not binary safe. Use or replace to
+.BI detect_handledata_r
+api.
+
+.SS Arguments:
 .TP
 .B handle
 .br
@@ -29,6 +38,11 @@ api.
 .B inbuf
 .br
 input string for detecting
+
+.TP
+.B inlen
+.br
+length of input string for detecting
 
 .TP
 .B outbuf
@@ -108,7 +122,9 @@ int main (void) {
 			return CHARDET_MEM_ALLOCATED_FAIL;
 		}
 
-		switch (detect_handledata (&d, "안녕하세요", &obj)) {
+		//switch (detect_handledata (&d, str[i], &obj))
+		switch (detect_handledata (&d, str[i], strlen(str[i]), &obj))
+		{
 			case CHARDET_OUT_OF_MEMORY :
 				fprintf (stderr, "On handle processing, occured out of memory\\n");
 				detect_obj_free (&obj);
