@@ -1,0 +1,1 @@
+.so man3/detect_r.3
